v0.7.7 02/01/2025 Fix new UZI login screen and made sure the driver closes on Java closure